--- a/index.html
+++ b/index.html
@@ -40,6 +40,15 @@
     <div class="card-container">
       <div class="card">
         <img src="img/2.webp" alt="card1">
+        <span class="percentuale">-30%</span>
+          <span class="sostenibilità">Sostenibilità</span>
+          <span class="heart">&hearts;</span>
+        <div>
+          <span class="brand">Levi's</span>
+          <h1>relaxed fit tee unisex</h1>
+          <span class="prezzo scontato">14,99&euro;</span>
+          <span class="prezzo originale">29,99&euro;</span>
+        </div>
       </div>
     </div>
     <div class="card-container">
